# zed-mysql-model-context-server

./: .gitignore  Cargo.toml  README.md  output.json  test-stdio.sh  test_all.json  test_no_db.json  zed-settings.json
src/: main.rs
