[package]
name = "mcp-server-mysql"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[[bin]]
name = "mcp-server-mysql"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql"] }
clap = { version = "4.0", features = ["derive"] }
